--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -2,3 +2,5 @@ framework:
     secret: no to secret
 sculpin_posts:
     permalink: blog/:year/:month/:day/:filename/
+sculpin_markdown:
+    parser_class: Michelf\Markdown
