--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-app/cache/*
-app/config/sculpin_kernel_*.yml
-app/config/sculpin_site_*.yml
-app/logs/*
-bin
-output_*
-sculpin.phar
-vendor
+/app/config/sculpin_kernel_*.yml
+/app/config/sculpin_site_*.yml
+/app/logs/
+/output_*
+/vendor/
