Compat with new Sculpin content types.

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -1,4 +1,5 @@
-sculpin_posts:
-    permalink: blog/:year/:month/:day/:filename/
+sculpin_content_types:
+    posts:
+        permalink: blog/:year/:month/:day/:filename/
 sculpin_markdown:
     parser_class: Michelf\Markdown
