--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -4,3 +4,4 @@ author: Beau Simensen
 disqus_short_name: srcmvn
 google_analytics_tracking_id: UA-12685022-2
 hub_url: http://dflydev.superfeedr.com/
+sidebar: none
