Changed how parser was called.

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -2,4 +2,4 @@ sculpin_content_types:
     posts:
         permalink: blog/:year/:month/:day/:filename/
 sculpin_markdown:
-    parser_class: Michelf\Markdown
+    parser_class: Sculpin\Bundle\MarkdownBundle\PhpMarkdownParser
