A lot of updates!

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -1,6 +1,4 @@
 title: Source Maven
 subtitle: Code Partition for Beau Simensen
 author: Beau Simensen
-disqus_short_name: srcmvn
-google_analytics_tracking_id: UA-12685022-2
-hub_url: http://dflydev.superfeedr.com/
+disqus_short_name: srcmvndev
